--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Ingatlan</h1>
-    <a href="/ingatlan/2024-04-07_16-58-48.html">2024-04-07_16-58-48.html</a>
+    <a href="/ingatlan/2024-04-07_22-39-21.html">2024-04-07_22-39-21</a>
+    <a href="/ingatlan/2024-04-07_16-58-48.html">2024-04-07_16-58-48</a>
 </body>
 </html>
