fix ingatlan list styling

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>slnz00</title>
+    <style>
+        .container a {
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <h1>Ingatlan</h1>
-    <a href="/ingatlan/2024-04-07_22-39-21.html">2024-04-07_22-39-21</a>
-    <a href="/ingatlan/2024-04-07_16-58-48.html">2024-04-07_16-58-48</a>
+    <div class="container">
+        <a href="/ingatlan/2024-04-07_22-39-21.html">2024-04-07_22-39-21</a>
+        <a href="/ingatlan/2024-04-07_16-58-48.html">2024-04-07_16-58-48</a>
+    </div>
 </body>
 </html>
